--- a/miguel-melo-design/package.json
+++ b/miguel-melo-design/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "bootstrap-4-grid": "^3.4.0",
     "core-js": "^3.6.4",
+    "firebase": "^7.14.2",
+    "firebase-tools": "^8.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6"
   },
