--- a/miguel-melo-design/package.json
+++ b/miguel-melo-design/package.json
@@ -10,10 +10,13 @@
   "dependencies": {
     "bootstrap-4-grid": "^3.4.0",
     "core-js": "^3.6.4",
+    "express": "^4.17.1",
     "firebase": "^7.14.2",
     "firebase-tools": "^8.2.0",
+    "nodemailer": "^6.4.6",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.6"
+    "vue-router": "^3.1.6",
+    "xoauth2": "^1.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.3.0",
