--- a/miguel-melo-design/package.json
+++ b/miguel-melo-design/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "towww": "vue-cli-service build --dest ./functions/www/ --mode development --watch",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -28,7 +29,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   }
