--- a/miguel-melo-design/.env
+++ b/miguel-melo-design/.env
@@ -1,8 +1,8 @@
-VUE_APP_API_KEY = "AIzaSyDvDgUhMaGxaTk_aYkNJDC-PwQ_FnRl8Fw"
-VUE_APP_AUTH_DOMAIN = "miguel-melo-design-test-bd.firebaseapp.com"
-VUE_APP_DATABASE_URL = "https://miguel-melo-design-test-bd.firebaseio.com"
-VUE_APP_PROJECT_ID = "miguel-melo-design-test-bd"
-VUE_APP_STORAGE_BUCKET = "miguel-melo-design-test-bd.appspot.com"
-VUE_APP_MESSAGING_SENDER_ID = "407552089199"
-VUE_APP_APP_ID = "1:407552089199:web:4955f1332719008142819a"
-VUE_APP_MEASUREMENT_ID = "G-FYKPR1S86J"
+VUE_APP_API_KEY = "AIzaSyCXIbcGenHCyjxJU33W6Z6UrE3TrBPLsr0"
+VUE_APP_AUTH_DOMAIN = "miguel-melo-design.firebaseapp.com"
+VUE_APP_DATABASE_URL = "https://miguel-melo-design.firebaseio.com"
+VUE_APP_PROJECT_ID = "miguel-melo-design"
+VUE_APP_STORAGE_BUCKET = "miguel-melo-design.appspot.com"
+VUE_APP_MESSAGING_SENDER_ID = "316780265137"
+VUE_APP_APP_ID= "1:316780265137:web:863059304ea4e7e02c6c90"
+VUE_APP_MEASUREMENT_ID = "G-1HT8JMXX2D"
